--- a/PierresBakery/Views/Orders/Show.cshtml
+++ b/PierresBakery/Views/Orders/Show.cshtml
@@ -1,5 +1,5 @@
 <h1>Order Details: </h1>
-
+<h2>@Model["order"].Title</h2>
 <h2>@Model["order"].Description</h2>
 <h3>Vendor: @Model["vendor"].Name</h3>
 
