update Views/Orders/Show.cshtml styling

--- a/PierresBakery/Views/Orders/Show.cshtml
+++ b/PierresBakery/Views/Orders/Show.cshtml
@@ -1,7 +1,13 @@
 <h1>Order Details: </h1>
-<h2>@Model["order"].Title</h2>
-<h2>@Model["order"].Description</h2>
-<h3>Vendor: @Model["vendor"].Name</h3>
+<h2>Vendor: </h2>
+<h4>@Model["vendor"].Name</h4>
+<h2>Vendor Description: </h2>
+<h4>@Model["vendor"].Description</h4>
+<h2>Order Title: </h2>
+<h4>@Model["order"].Title</h4>
+<h2>Order Description: </h2>
+<h4>@Model["order"].Description</h4>
 
 <a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a>
+<br>
 <a href='/vendors'>View all Vendors</a>
