--- a/PierresBakery/Views/Home/Index.cshtml
+++ b/PierresBakery/Views/Home/Index.cshtml
@@ -1,3 +1,3 @@
-<h1>Welcome back Piere!</h1>
+<h1>Welcome Back, Piere!</h1>
 <h3><a href='/vendors'>View vendors</a></h3>
 <h3><a href='/vendors/new'>Add a new vendor</a></h3>
