update Views/Orders/Show.cshtml styling

--- a/PierresBakery/Views/Orders/Show.cshtml
+++ b/PierresBakery/Views/Orders/Show.cshtml
@@ -3,7 +3,7 @@
 <h4>@Model["vendor"].Name</h4>
 <h2>Vendor Description: </h2>
 <h4>@Model["vendor"].Description</h4>
-<h2>Order Title: </h2>
+<h2>Order: </h2>
 <h4>@Model["order"].Title</h4>
 <h2>Order Description: </h2>
 <h4>@Model["order"].Description</h4>
