--- a/PierresBakery/Views/Orders/New.cshtml
+++ b/PierresBakery/Views/Orders/New.cshtml
@@ -6,5 +6,7 @@
   <input id="orderTitle" name="orderTitle" type="text">
   <label for="orderDescription">Order Description</label>
   <input id="orderDescription" name="orderDescription" type="text">
+  <label for="orderPrice">Order Price</label>
+  <input id="orderPrice" name="orderPrice" type="text">
   <button type='submit'>Add Order</button>
 </form>
