--- a/PierresBakery/Views/Orders/Show.cshtml
+++ b/PierresBakery/Views/Orders/Show.cshtml
@@ -7,6 +7,8 @@
 <h4>@Model["order"].Title</h4>
 <h2>Order Description: </h2>
 <h4>@Model["order"].Description</h4>
+<h2>Order Price: </h2>
+<h4>@Model["order"].Price</h4>
 
 <a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a>
 <br>
