update Order class to include order date and add property instances wthin all necessary files

--- a/PierresBakery/Views/Orders/Show.cshtml
+++ b/PierresBakery/Views/Orders/Show.cshtml
@@ -9,6 +9,8 @@
 <h4>@Model["order"].Description</h4>
 <h2>Order Price: </h2>
 <h4>@Model["order"].Price</h4>
+<h2>Order Date: </h2>
+<h4>@Model["order"].Date</h4>
 
 <a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a>
 <br>
