--- a/PierresBakery/Views/Orders/New.cshtml
+++ b/PierresBakery/Views/Orders/New.cshtml
@@ -8,5 +8,7 @@
   <input id="orderDescription" name="orderDescription" type="text">
   <label for="orderPrice">Order Price</label>
   <input id="orderPrice" name="orderPrice" type="text">
+  <label for="orderDate">Order Date</label>
+  <input id="orderDate" name="orderDate" type="text">
   <button type='submit'>Add Order</button>
 </form>
