--- a/PierresBakery/Views/Home/Index.cshtml
+++ b/PierresBakery/Views/Home/Index.cshtml
@@ -1,3 +1,9 @@
+@{
+  Layout = "_Layout";
+}
+
+<div class="container">
 <h1>Welcome Back, Piere!</h1>
 <h3><a href='/vendors'>View vendors</a></h3>
 <h3><a href='/vendors/new'>Add a new vendor</a></h3>
+</div>
