--- a/PierresBakery/Views/Orders/New.cshtml
+++ b/PierresBakery/Views/Orders/New.cshtml
@@ -1,3 +1,8 @@
+@{
+  Layout = "_Layout";
+}
+
+<div class="container">
 <h1>Add a new order to @Model.Name</h1>
 
 <form action="/vendors/@Model.Id/orders" method="post">
@@ -14,3 +19,4 @@
 </form>
 
 <p><a href='/vendors'>Return to vendor list</a></p>
+</div>
