--- a/PierresBakery/Views/Orders/Show.cshtml
+++ b/PierresBakery/Views/Orders/Show.cshtml
@@ -1,3 +1,8 @@
+@{
+  Layout = "_Layout";
+}
+
+<div class="container">
 <h1>Order Details: </h1>
 <h2>Vendor: </h2>
 <h4>@Model["vendor"].Name</h4>
@@ -15,3 +20,4 @@
 <a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a>
 <br>
 <a href='/vendors'>View all Vendors</a>
+</div>
