update README.md file BDD specification and make sure all woring matches within decribed Views

--- a/PierresBakery/Views/Orders/Show.cshtml
+++ b/PierresBakery/Views/Orders/Show.cshtml
@@ -19,5 +19,5 @@
 
 <a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a>
 <br>
-<a href='/vendors'>View all Vendors</a>
+<a href='/vendors'>Return to vendor list</a>
 </div>
